[gd_scene load_steps=9 format=3 uid="uid://dhtehcsatwgxi"]

[ext_resource type="Script" path="res://src/game_world/game_world.gd" id="1_1ymsr"]
[ext_resource type="PackedScene" uid="uid://m0txqaij1k45" path="res://src/multiplayer/player_wrapper/player_wrapper.tscn" id="2_3ss46"]
[ext_resource type="PackedScene" uid="uid://bjxrh13ovurni" path="res://src/mech/mech.tscn" id="2_qi47r"]
[ext_resource type="TileSet" uid="uid://c7r7c1mevu851" path="res://resources/tilesets/factory_tileset.tres" id="2_sg1io"]
[ext_resource type="PackedScene" uid="uid://dscy70cidsylo" path="res://src/virus/virus.tscn" id="4_78r7y"]
[ext_resource type="PackedScene" uid="uid://dwm7phorujkav" path="res://src/ui/game_chat/game_chat.tscn" id="5_o27hs"]
[ext_resource type="PackedScene" uid="uid://6kpqpn83qkv4" path="res://src/game_world/objects/door/door.tscn" id="8_o42qh"]
[ext_resource type="PackedScene" uid="uid://dwwwnrtokmwfb" path="res://src/game_world/objects/front_door/front_door.tscn" id="9_pwgus"]

[node name="GameWorld" type="Node2D"]
script = ExtResource("1_1ymsr")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_sg1io")
format = 2
layer_0/name = "backgound"
layer_1/name = "floor"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(262144, 65536, 1, 262145, 65536, 1, 262146, 65536, 1, 262147, 65536, 1, 262148, 65536, 1, 262149, 65536, 1, 262150, 131072, 1, 327686, 131072, 2, 327685, 65536, 2, 327684, 65536, 2, 327683, 65536, 2, 327682, 65536, 2, 327681, 65536, 2, 327680, 327680, 1, 393220, 65536, 3, 393221, 65536, 3, 393222, 131072, 3, 393219, 65536, 3, 393218, 65536, 3, 393217, 65536, 3, 393216, 0, 3, 327679, 65536, 1, 327678, 0, 1, 393215, 65536, 3, 393214, 0, 3)
layer_2/name = "walls"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()

[node name="MechWrapper" parent="." instance=ExtResource("2_3ss46")]
position = Vector2(993.832, 648.691)

[node name="Mech" parent="MechWrapper" instance=ExtResource("2_qi47r")]
z_index = 1
position = Vector2(-993.832, -648.691)
scale = Vector2(0.8, 0.8)

[node name="VirusWrapper" parent="." instance=ExtResource("2_3ss46")]
position = Vector2(993.832, 648.691)

[node name="Virus" parent="VirusWrapper" instance=ExtResource("4_78r7y")]

[node name="ChatCanvas" type="CanvasLayer" parent="."]
visible = false

[node name="GameChat" parent="ChatCanvas" instance=ExtResource("5_o27hs")]

[node name="GameObjects" type="Node2D" parent="."]

[node name="Door" parent="GameObjects" instance=ExtResource("8_o42qh")]
position = Vector2(896, 768)

[node name="FrontDoor" parent="GameObjects" node_paths=PackedStringArray("opposite_door") instance=ExtResource("9_pwgus")]
position = Vector2(-256, 768)
opposite_door = NodePath("../FrontDoor2")

[node name="FrontDoor2" parent="GameObjects" node_paths=PackedStringArray("opposite_door") instance=ExtResource("9_pwgus")]
position = Vector2(1536, 768)
opposite_door = NodePath("../FrontDoor")

[connection signal="chat_requested" from="MechWrapper/Mech" to="." method="_on_mech_chat_requested"]
[connection signal="chat_requested" from="VirusWrapper/Virus" to="." method="_on_virus_chat_requested"]
[connection signal="minigame_canceled" from="VirusWrapper/Virus" to="." method="_on_virus_minigame_canceled"]
[connection signal="minigame_completed" from="VirusWrapper/Virus" to="." method="_on_virus_minigame_completed"]
[connection signal="chat_closed" from="ChatCanvas/GameChat" to="." method="_on_game_chat_chat_closed"]
[connection signal="object_chosen" from="GameObjects/Door" to="." method="_on_object_chosen"]
[connection signal="object_chosen" from="GameObjects/FrontDoor" to="." method="_on_object_chosen"]
[connection signal="virus_door_entered" from="GameObjects/FrontDoor" to="." method="_on_front_door_virus_door_entered"]
[connection signal="object_chosen" from="GameObjects/FrontDoor2" to="." method="_on_object_chosen"]
[connection signal="virus_door_entered" from="GameObjects/FrontDoor2" to="." method="_on_front_door_virus_door_entered"]
